# intelligent_document_processing

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/: README.md  actionlint.yaml  dependabot.yml
.github/workflows/: benchmark-staging.yml  ci.yml  deploy-production.yml  deploy-staging.yml  harden-staging.yml  release-candidate.yml  rollback-production.yml
Notes/: OCR.md  OpenCV.md  PaddleOCR.md  infrastructure.md  multimodal-OCR-training-data.md  project-scope.md  temporalio.md  vLLM.md
classifier_router_service/: README.md
classifier_router_service/app/: main.py
classifier_router_service/tests/: test_main.py
clients/: README.md
configs/: settings.py
data/: README.md
delivery_service/: README.md
docker/: mlflow.Dockerfile  python-service.Dockerfile
evaluation_service/: README.md
extraction_service/: README.md
human_review_console/: README.md
infra/: STACK.md
infra/ci/: README.md  (+1 more)
ingestion_service/: README.md
layout_service/: README.md
observability_stack/: README.md
ocr_service/: README.md
preprocess_worker/: README.md
scripts/: deploy_release.sh  enforce_retention.py  full_pipeline_e2e.py  generate_sample_invoice.py  production_preflight.py  run_dataset_benchmark.py  run_e2e.sh  run_gateway_e2e.sh  staging_operational_drill.py  verify_promotion_evidence.py
tests/: test_production_preflight.py  test_promotion_evidence.py  test_retention.py  test_staging_operational_drill.py
validation_service/: README.md
workflow_orchestrator/: README.md
(+78 files in other folders)
